--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
@@ -34,8 +34,13 @@
                     ${section.label}
                   </span>
                   <sly data-sly-list.item="${section.sectionItems}">
-                    <a class="navbar-item ${item.isExternalUrl ? 'external-url' : ''}" href="${item.url}" target="${item.isExternalUrl ? '_blank' : ''}">
+                    <a class="navbar-item" href="${item.url}" target="${item.isExternalUrl ? '_blank' : ''}">
                       ${item.label}
+                      <sly data-sly-test="${item.isExternalUrl}">
+                        <span class="icon">
+                          <i class="mdi mdi-open-in-new"></i>
+                        </span>
+                      </sly>
                     </a>
                   </sly>
                 </sly>
@@ -44,8 +49,13 @@
             <sly data-sly-test="${!column.hideColumn && column.type == 'highlights'}">
               <div class="column highlights-column ${column.colSizeClass}">
                 <sly data-sly-list.highlight="${column.highlights}">
-                  <a class="navbar-item ${highlight.isExternalUrl ? 'external-url' : ''}" href="${highlight.url}" target="${highlight.isExternalUrl ? '_blank' : ''}">
+                  <a class="navbar-item" href="${highlight.url}" target="${highlight.isExternalUrl ? '_blank' : ''}">
                     ${highlight.label}
+                    <sly data-sly-test="${item.isExternalUrl}">
+                      <span class="icon">
+                        <i class="mdi mdi-open-in-new"></i>
+                      </span>
+                    </sly>
                   </a>
                 </sly>
               </div>
