--- a/applications/common/frontend/src/components/Hero/Hero.scss
+++ b/applications/common/frontend/src/components/Hero/Hero.scss
@@ -24,4 +24,8 @@
   &.is-medium {
     @include organism-hero.o-hero-medium;
   }
+
+  &.is-primary {
+    @include organism-hero.o-hero-primary;
+  }
 }
