--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.progress-bar/m.progress-bar.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.progress-bar/m.progress-bar.scss
@@ -16,4 +16,22 @@
  * -->
  */
 
-@forward 'm.level-item';
+@use 'sass:map';
+@use 'src/atomic-design-system/00-token/t.color' as color;
+
+@mixin m-progressbar {
+
+  &.is-primary::-webkit-progress-value {
+    background-color: var(--color-primary--600)
+  }
+  &.is-primary::-moz-progress-bar {
+    background-color: var(--color-primary--600)
+  }
+  &.is-primary::-ms-fill {
+    background-color: var(--color-primary--600)
+  }
+  &.is-primary:indeterminate {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, var(--color-primary--600)), color-stop(30%, #ededed));
+    background-image: linear-gradient(90deg, var(--color-primary--600) 30%, #ededed 0)
+  }
+}
