--- a/applications/common/frontend/src/components/Panel/_index.scss
+++ b/applications/common/frontend/src/components/Panel/_index.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2023 Dynamic Solutions
+ *     Copyright (C) 2024 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,24 +16,4 @@
  * -->
  */
 
-@use 'src/atomic-design-system/01-atom/a.button';
-
-.button {
-  @extend .a-button;
-
-  &.is-primary {
-    @extend .a-button-primary;
-  }
-
-  &.is-secondary {
-    @extend .a-button-secondary;
-  }
-
-  &.is-ghost {
-    @extend .a-button-ghost;
-  }
-
-  &.is-text {
-    @extend .a-button-text;
-  }
-}
+@forward 'Panel';
