--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -18,7 +18,8 @@
 
 $map_t-base-color: (
   body-background: #1C1C1C,
-  body-text: #FFF
+  body-text: #FFF,
+  secondary-background: #232323
 );
 
 $map_t-color-ids: (
