KYAN-138 Container add horizontal alignment property

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/container/container.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/container/container.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.ContainerComponent">
-  <sly data-sly-set.classes="container ${model.containerStyle}"></sly>
+  <sly data-sly-set.classes="container ${model.containerClasses @ join=' '}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <div class="${classes}">
       <sly
