--- a/applications/common/frontend/src/dark-mode/atomic-design-system/03-organism/o.blog-article-header/_index.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/03-organism/o.blog-article-header/_index.scss
@@ -16,5 +16,4 @@
  * -->
  */
 
-@use './dark-mode/global-variables';
-@use "./dark-mode/overwrite-components-props";
+@forward 'o.blog-article-header';
