[WSIO-397] Update styles

--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -51,7 +51,7 @@
     @include font.t-font-size-fluid(22, 32);
 
 
-    color: var(--base-color-black);
+    color: var(--base-color-body-text, var(--base-color-black));
     transform: rotate(45deg);
   }
 
