--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -30,8 +30,8 @@
     word-break: break-word;
   }
 
-  h2 {
-    color: inherit;
+  h1,h2,h3,h4,h5,h6 {
+    color: var(--base-color-body-text, var(--color-grey--800));
   }
 
   strong {
