Feature/wsio 397 fix page styles for dark mode (#351)
* [WSIO-397] Add styling fixing dark mode issues

* [WSIO-397] Update styles

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -30,6 +30,10 @@
     word-break: break-word;
   }
 
+  h1,h2,h3,h4,h5,h6 {
+    color: var(--base-color-body-text, var(--color-grey--800));
+  }
+
   strong {
     color: unset;
   }
