--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -82,7 +82,7 @@
     <div class="field">
       <div class="control">
         <input id="submit-btn" class="button is-link is-medium" type="submit"
-               placeholder="${model.submitLabel}" data-form-id="${resource.name}">
+               value="${model.submitLabel}" data-form-id="${resource.name}">
       </div>
     </div>
     <div class="block">
