--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -19,7 +19,8 @@
 $map_t-base-color: (
   body-background: #1C1C1C,
   body-text: #FFF,
-  secondary-background: #232323
+  secondary-background: #232323,
+  secondary-text: #AAA
 );
 
 $map_t-color-ids: (
