--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
@@ -21,14 +21,39 @@
 @use 'src/atomic-design-system/00-token/t.color' as color;
 @use 'src/bulma-overwrite/bulma-spacing';
 
-@mixin a-tag {
-  background-color: var(--color-grey--900) !important;
+
+@mixin a-tag-default-color {
+  background-color: var(--base-color-contrast-background, var(--color-grey--900));
+  color: var(--base-color-contrast-text, var(--base-color-white));
+}
+
+/* default tag style */
+@mixin a-tag-default {
+
+  &:not(body) {
+
+    @include a-tag-default-color;
+
+    &.is-primary {
+
+      background-color: var(--color-primary--600);
+
+      &.is-light {
+        background-color: var(--color-primary--100);
+        color: var(--color-primary--600);
+      }
+    }
+  }
+}
+
+/* tag style in some context */
+@mixin a-tag-contextual {
+
+  @include a-tag-default-color;
 
   border-radius: var(--border-radius-1);
   font-weight: var(--font-weight-600);
   @extend .px-4;
-
-  color: var(--base-color-white);
 
   &.is-normal {
     font-size: var(--font-size-14);
