Feature/wsio 397 style fixes for streamx dev (#352)
* WSIO-397 fix Button label property

* WSIO-397 fix inputs colours

* WSIO-397 fix Table styles for dark mode

* WSIO-397 add visual tests for table

--- a/applications/common/frontend/src/bulma-overwrite/colors.scss
+++ b/applications/common/frontend/src/bulma-overwrite/colors.scss
@@ -188,3 +188,55 @@
   }
 }
 
+/*  inputs text colors */
+
+.input, .select select, .textarea, .label  {
+  color: var(--base-color-body-text, var(--color-grey--700));
+  background-color: var(--base-color-secondary-background, var(--base-color-white));
+}
+
+.input::placeholder {
+  color: var(--base-color-secondary-text, var(--color-grey--700));
+}
+
+.checkbox:hover, .radio:hover {
+  color: var(--base-color-secondary-text, #363636)
+}
+
+/*  table   */
+
+$table-selectors: '.table', '.table.is-striped';
+
+@each $ts in $table-selectors {
+  table#{$ts} {
+
+    @each $rt in thead, tbody {
+      #{$rt} tr {
+        background-color: var(--base-color-body-background, var(--base-color-white));
+      }
+    }
+
+    thead {
+      tr {
+        th {
+          font-weight: bold;
+          color: var(--base-color-body-text, var(--base-color-black));
+        }
+      }
+    }
+
+    tbody {
+      tr {
+        &:not(.is-selected) {
+          &:nth-child(2n) {
+            background-color: var(--base-color-secondary-background, #fafafa);
+          }
+        }
+
+        td {
+          color: var(--base-color-body-text, var(--base-color-black));
+        }
+      }
+    }
+  }
+}
