--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -24,6 +24,18 @@
   </sly>
   <h1 id="${model.anchorId}" style="text-align: ${model.titleAlign @ context='styleToken'};" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.textAsOneLine @ context='html'}
+    <sly data-sly-test="${model.addTypedEffect}">
+      <span id="typed-strings" class="${model.typedClasses @ join=' '}">
+        <sly data-sly-list.item="${model.endings}">
+          <p>
+            ${item.value}
+          </p>
+        </sly>
+      </span>
+      <sly data-sly-test="${!wcmmode.isEdit && model.endings}">
+        <span id="typed" class="${model.typedClasses @ join=' '}" data-endings="${model.endingJson}" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
+      </sly>
+    </sly>
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
     <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
