KYAN-147 remove endingsJson - SEO reasons

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -33,7 +33,7 @@
         </sly>
       </span>
       <sly data-sly-test="${!wcmmode.isEdit && model.endings}">
-        <span id="typed" class="${model.typedClasses @ join=' '}" data-endings="${model.endingJson}" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
+        <span id="typed" class="${model.typedClasses @ join=' '}" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
       </sly>
     </sly>
   </h1>
