KYAN-147 names refactor

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -24,8 +24,8 @@
   </sly>
   <h1 id="${model.anchorId}" style="text-align: ${model.titleAlign @ context='styleToken'};" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.textAsOneLine @ context='html'}
-    <sly data-sly-test="${model.addTypedEffect}">
-      <span id="typed-strings" class="${model.typedClasses @ join=' '}">
+    <sly data-sly-test="${model.addAnimatedEndings}">
+      <span id="typed-strings" class="${model.endingsClasses @ join=' '}">
         <sly data-sly-list.item="${model.endings}">
           <p>
             ${item.value}
@@ -33,7 +33,7 @@
         </sly>
       </span>
       <sly data-sly-test="${!wcmmode.isEdit && model.endings}">
-        <span id="typed" class="${model.typedClasses @ join=' '}" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
+        <span id="typed" class="${model.endingsClasses @ join=' '}" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
       </sly>
     </sly>
   </h1>
