KYAN-147 typed title component (#355)
* KYAN-147 add backend and frontend

* KYAN-147 remove endingsJson - SEO reasons

* KYAN-147 license minor fix

* KYAN-147 names refactor

* KYAN-147 names refactor

* KYAN-147 change id to class, minor other improvements

* KYAN-147 minor change in class

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -24,6 +24,18 @@
   </sly>
   <h1 id="${model.anchorId}" style="text-align: ${model.titleAlign @ context='styleToken'};" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.textAsOneLine @ context='html'}
+    <sly data-sly-test="${model.addAnimatedEndings}">
+      <span class="${model.endingsClasses @ join=' '} typed-strings-animation">
+        <sly data-sly-list.item="${model.endings}">
+          <span>
+            ${item.value}
+          </span>
+        </sly>
+      </span>
+      <sly data-sly-test="${!wcmmode.isEdit && model.endings}">
+        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
+      </sly>
+    </sly>
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
     <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
