WSIO-397 fix outlined button colors

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
@@ -72,6 +72,17 @@
     &.is-inverted {
       color: var(--color-primary--600);
     }
+
+    &.is-outlined {
+      background-color: transparent;
+      color:            var(--color-primary--600);
+      border-color:     var(--color-primary--600);
+
+      &:hover {
+        background-color: var(--color-primary--600);
+        border-color:     var(--color-primary--600);
+      }
+    }
   }
 
   &-secondary {
