WSIO-397 change content secondary text color

--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -22,6 +22,7 @@ $map_t-base-color: (
   secondary-background: #232323,
   secondary-text: #AAA,
   contrast-background: #555,
+  content-strong: #03dac6,
   contrast-text: #CCC
 );
 
