--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
@@ -92,8 +92,8 @@
     color: var(--base-color-body-text, var(--color-grey--900));
 
     &:hover {
-      border-color: var(--color-secondary--600, var(--color-primary--600));
-      color: var(--color-secondary--900, var(--color-primary--900));
+      background-color: var(--color-secondary--600, var(--color-primary--600));
+      border-color:     var(--color-secondary--600, var(--color-primary--600));
     }
 
     &:focus:not(:active) {
