--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -81,7 +81,7 @@
 
     <div class="field">
       <div class="control">
-        <input id="submit-btn" class="button is-link is-medium" type="submit"
+        <input id="submit-btn" class="button is-primary is-medium" type="submit"
                value="${model.submitLabel}" data-form-id="${resource.name}">
       </div>
     </div>
