WSIO-397 inerit original bulma color

--- a/applications/common/frontend/src/bulma-overwrite/colors.scss
+++ b/applications/common/frontend/src/bulma-overwrite/colors.scss
@@ -193,7 +193,7 @@
 a {
   color: var(--color-primary--600);
   &:hover {
-    color: var(--base-color-secondary-text);
+    color: var(--base-color-secondary-text, inherit);
   }
 }
 
