--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -49,7 +49,7 @@ $map_t-color-by-id: (
   secondary--200: #8FFFEC,
   secondary--300: #4FF9E1,
   secondary--400: #1BE6CF,
-  secondary--500: #1BE6CF,
+  secondary--500: #03DAC6,
   secondary--600: #00A297,
   secondary--700: #048179,
   secondary--800: #096662,
