KYAN-148 bg for container

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/container/container.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/container/container.html
@@ -22,6 +22,7 @@
     <div class="${classes}">
       <sly
           data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+          ${model.assetReference}
     </div>
   </sly>
   <sly data-sly-test="${!resource.hasChildren}">
