--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
@@ -16,7 +16,7 @@
   ~
 */-->
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.SectionComponent">
-    <section class="section ${model.size} ${model.image.assetReference ? 'with-background-image' : ''}" id="${model.id}" style="${model.image.assetReference ? 'background-image: url(${model.image.assetReference})' : ''}">
+    <section class="section ${model.size} ${model.image.assetReference ? 'with-background-image' : ''}" id="${model.id}" style="background-image:url('${model.image.assetReference @ context='styleString'}');">
         <sly data-sly-repeat.paragraph="${model.children}"
              data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </section>
